# sentinel

./: Cargo.toml  LICENSE  README.md  SECURITY.md
docs/: SECURITY.md
sentinel-agent/src/: main.rs
sentinel-guest/: Cargo.toml
sentinel-guest-api/: Cargo.toml
sentinel-guest-api/src/: lib.rs
sentinel-guest/src/: lib.rs
sentinel-host/: Cargo.toml
sentinel-host/src/: capabilities.rs  config.rs  engine.rs  hitl.rs  host_calls.rs  lib.rs  llm.rs  main.rs
sentinel-shared/: Cargo.toml
sentinel-shared/src/: lib.rs
sentinel-ui/: index.html  package.json
sentinel-ui/src/: App.tsx  index.css
sentinel-ui/src-tauri/: Cargo.toml  tauri.conf.json
sentinel-ui/src-tauri/src/: commands.rs  main.rs
sentinel-ui/src/components/: ChatView.tsx  HitlModal.tsx  LaunchPanel.tsx  LogFeed.tsx  SettingsPanel.tsx  TokenPanel.tsx
wit/: sentinel.wit
