[workspace]
members = [
    "sentinel-host",
    "sentinel-guest-api",
    "sentinel-guest",
    "sentinel-shared",
    "sentinel-ui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
