[package]
name = "sentinel-guest-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SENTINEL Guest API — type-safe bindings for guest-side agent code"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen = "0.36.0"
