[package]
name = "sentinel-host"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SENTINEL Host — The Jailer: orchestration, I/O, and capability enforcement"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[lib]
name = "sentinel_host"
path = "src/lib.rs"

[dependencies]
sentinel-shared = { path = "../sentinel-shared" }
wasmtime = { version = "27", features = ["component-model"] }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
thiserror = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
wasmtime-wasi = "27.0.0"
