[package]
name = "sentinel-ui"
version = "0.1.0"
edition = "2021"
description = "SENTINEL Dashboard — Tauri desktop UI"

[lib]
name = "sentinel_ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "sentinel-ui"
path = "src/main.rs"

[dependencies]
sentinel-host = { path = "../../sentinel-host" }
sentinel-shared = { path = "../../sentinel-shared" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
